--- a/templates/new_user.html
+++ b/templates/new_user.html
@@ -16,12 +16,16 @@
             <input class="form-control" type="text" id="newUsername" name="username" placeholder="New Username">
         </div>
         <div class="form-group">
-            <label class=".sr-only" for="profilePicture">Profile Picture</label>
-            <input class="form-control" type="photo" id="profilePicture" name="picture" placeholder="Profile Picture">
+            <label class=".sr-only" for="accountPassword">Desired Password</label>
+            <input class="form-control" type="password" id="accountPassword" name="password" placeholder="Your desired password here">
         </div>
         <div class="form-group">
-            <label class=".sr-only" for="accountEmail">Name of hotel</label>
+            <label class=".sr-only" for="accountEmail">E-mail</label>
             <input class="form-control" type="email" id="accountEmail" name="email" placeholder="E-mail (example@example.com)">
+        </div>
+        <div class="form-group">
+            <label class=".sr-only" for="profilePicture">Profile Picture</label>
+            <input class="form-control" type="photo" id="profilePicture" name="picture" placeholder="URL of picture (www.example.com/happy/fun/pic.jpeg)">
         </div>
         <input class="btn btn-danger" type="submit" value="Add Hotel">
     </form>
