--- a/static/scss/style.scss
+++ b/static/scss/style.scss
@@ -138,6 +138,13 @@ img {
 
 .flex-container {
   display: flex;
+  justify-content: space-between;
+  position: relative;
+  width: 100%;
+}
+
+.sub-link {
+  margin-bottom: 20px;
 }
 
 // ************************************
@@ -167,7 +174,11 @@ header {
   .hdr-icon {
     display: flex;
     float: right;
-    position: relative;
+    margin-bottom: auto;
+    margin-right: 10px;
+    margin-top: auto;
+    padding: 10px;
+    z-index: 3;
   }
 }
 
@@ -177,7 +188,7 @@ header {
 .form {
   margin-left: 0;
   margin-right: auto;
-  width: 75%;
+  width: 100%;
 }
 
 // {{ end FORMS }}
@@ -189,7 +200,7 @@ header {
   background-size: cover;
 }
 
-.title {
+.page-title {
   margin-bottom: 50px;
 }
 
@@ -295,6 +306,11 @@ header {
 .signin-result {
   position: relative;
   top: 40px;
+
+  img {
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
 
 // {{ end SIGNIN }}
@@ -314,36 +330,52 @@ header {
   // ************************************
 
   // {{ start HEADER }}
-  .navbar {
-    height: 100vh;
-    position: absolute;
-    width: 300px;
+  header {
+    .navbar {
+      background: $color-4;
+      box-shadow: -2px 4px 4px 4px rgba($color-8, .5);
+      display: block;
+      height: 100vh;
+      position: absolute;
+      right: -306px;
+      top: 0;
+      transition: .2s ease-in-out;
+      width: 300px;
+      z-index: 1;
 
-    li {
-      border-bottom: 1px solid $color-6;
-      margin-left: auto;
-      margin-right: auto;
-      width: 95%;
+      ul {
+        width: 100%;
+      }
+
+      li {
+        border-bottom: 1.5px solid rgba($color-6, .5);
+        display: block;
+        height: 70px;
+        margin-left: auto;
+        margin-right: auto;
+        width: 100%;
+      }
+
+      a {
+        color: $color-8;
+        margin-left: 10px;
+        width: 100%;
+      }
+
+      .hdr-text {
+        margin-bottom: auto;
+        margin-top: auto;
+      }
+
+      .btn {
+        border: 0;
+        height: inherit;
+      }
     }
 
-    a {
-      color: $color-8;
-      margin-left: 10px;
-      width: 100%;
+    .navbar.visible {
+      transform: translateX(-306px);
     }
-  }
-
-  .hdr-icon {
-    position: absolute;
-    right: 0;
-    top: 0;
-  }
-
-  .navbar.visible {
-    background-color: $color-4;
-    display: block;
-    right: 0;
-
   }
 
   // {{ end HEADER }}
@@ -365,13 +397,6 @@ header {
 
   // {{ start HEADER }}
   header {
-    .flex-container {
-      display: flex;
-      justify-content: space-between;
-      position: relative;
-      width: 100%;
-    }
-
     .items {
       display: flex;
     }
@@ -405,6 +430,14 @@ header {
     height: 400px;
     width: 700px;
   }
+
+  // {{ start FORMS }}
+  .form {
+    width: 75%;
+  }
+
+  // {{ end FORMS }}
+
 }
 
 // ************************************
