--- a/templates/delete_hotel.html
+++ b/templates/delete_hotel.html
@@ -6,14 +6,12 @@
 
 
 {% block body %}
-<section class="lay-content">
-<h1 class="page-title heading">Delete {{ hotel.name }}</h1>
-
+<section>
+    <h1 class="page-title heading">Delete {{ hotel.name }}</h1>
     <form action="{{ url_for('deleteHotel', hotel_id=hotel.id) }}" method="POST">
         <input class="btn btn-danger" type="submit" value="Delete Hotel"></input>
     </form>
+    <a class="sub-link" href="{{ url_for('showHotels', hotels=hotels) }}">Cancel</a>
 </section>
-
-<a class="sub-link" href="{{ url_for('showHotels', hotels=hotels) }}">Cancel</a>
 
 {% endblock %}
