--- a/templates/login.html
+++ b/templates/login.html
@@ -7,7 +7,7 @@
 {% block body %}
 
 <!-- GOOGLE SIGN IN BUTTON -->
-<section class="signin-section">
+<section>
     {% if 'username' not in session %}
     <div class="signin-box">
         <img src="/static/img/basho_logo.svg" class="signin-logo" alt="basho logo" title="basho">
@@ -26,6 +26,7 @@
         <h3 class="center-text">You are already logged in!</br>Head on over to the <a class="sub-link" href="{{ url_for('showHotels', hotels=hotels) }}" title="Hotel listings">Hotel listings</a> page.</h3>
     </div>
     {% endif %}
+    
 </section>
 
 <script>
