--- a/templates/new_hotel.html
+++ b/templates/new_hotel.html
@@ -7,13 +7,13 @@
 
 {% block body %}
 
-<section class="lay-content">
+<section>
     <h1 class="page-title heading">Add New Hotel</h1>
 
     <form class="form sm-form" action="{{ url_for('newHotel') }}" method="POST">
         <div class="form-group">
             <label class=".sr-only" for="nameOfHotel">Name of hotel</label>
-            <input class="form-control" type="text" id="nameOfHotel" name="name" placeholder="Name of hotel">
+            <input class="form-control" type="text" id="nameOfHotel" name="name" placeholder="Name of hotel" required>
         </div>
         <div class="form-group">
             <label class=".sr-only" for="urlOfImage">URL of Image</label>
@@ -23,9 +23,15 @@
             <label class=".sr-only" for="description">Description</label>
             <input class="form-control" type="textarea" id="description" name="description" placeholder="Description">
         </div>
-        <div class="form-group">
-            <label class=".sr-only" for="roomPrice">Room Rate (in USD)</label>
-            <input class="form-control" type="number" id="roomPrice" step="0.01" name="price" placeholder="Room rate(in USD)">
+        <div class="input-group mb-3">
+            <label class=".sr-only" for="roomPrice">Room Rate (in USD) </label>
+            <div class="input-group-prepend">
+                <span class="input-group-text">$</span>
+            </div>
+            <input type="number" class="form-control" id="roomPrice" name="price" placeholder="Room rate(in USD)">
+            <div class="input-group-append">
+                <span class="input-group-text">.00</span>
+            </div>
         </div>
         <div class="form-group">
             <label class=".sr-only" for="rating">Rating</label>
@@ -33,8 +39,8 @@
         </div>
         <div class="form-group">
             <label class=".sr-only" for="hotelType">Type of lodging</label>
-            <select class="form-control" name="category" id="hotelType">
-                <option selected>--Choose Category--</option>
+            <select class="form-control" name="category" id="hotelType" required>
+                <option value="" disabled selected hidden>--Choose Category--</option>
                 <option value="Bed & Breakfast">Bed & Breakfast</option>
                 <option value="Hotel">Hotel</option>
                 <option value="Hot Spring Inn">Hot Spring Inn</option>
@@ -46,7 +52,6 @@
         <input class="btn btn-danger" type="submit" value="Add Hotel">
     </form>
     <a class="sub-link" href="{{ url_for('showHotels', hotels=hotels) }}">Cancel</a>
-
 </section>
 
 {% endblock %}
