--- a/templates/new_user.html
+++ b/templates/new_user.html
@@ -7,9 +7,8 @@
 
 {% block body %}
 
-<section class="lay-content">
+<section>
     <h1 class="page-title heading">Create Account</h1>
-
     <form class="form" action="{{ url_for('newUser') }}" method="POST">
         <div class="form-group">
             <label class=".sr-only" for="newUsername">New Username</label>
@@ -30,7 +29,6 @@
         <input class="btn btn-danger" type="submit" value="Add Hotel">
     </form>
     <a class="sub-link" href="{{ url_for('showHotels', hotels=hotels) }}">Cancel</a>
-
 </section>
 
 {% endblock %}
