--- a/templates/public_show_hotels_by_category.html
+++ b/templates/public_show_hotels_by_category.html
@@ -6,8 +6,7 @@
 
 
 {% block body %}
-<section class="lay-content">
-
+<section>
     <h1 class="page-title heading">{{ category }}</h1>
 
     {% for hotel in hotels %}
@@ -17,7 +16,6 @@
     <p><a href="{{ url_for('showLogin') }}"><span class="glyphicon glyphicon-user"></span>Log In</a> to edit.</p>
 
     <a class="sub-link" href="{{ url_for('showHotels', hotels=hotels) }}">Back to Lodgings</a>
-
 </section>
 
 {% endblock %}
