--- a/templates/show_hotel_categories.html
+++ b/templates/show_hotel_categories.html
@@ -6,13 +6,13 @@
 
 
 {% block body %}
-<section class="lay-content">
-<h1 class="page-title heading">What kind of lodging are you looking for?</h1>
+<section>
+    <h1 class="page-title heading">What kind of lodging are you looking for?</h1>
 
-{% for category in categories %}
-    <h1><a class="category" href="{{ url_for('showHotelsByCategory', category=category[0]) }}">{{ category[0] }}</a></h1>
-{% endfor %}
-
+    {% for category in categories %}
+        <h1><a class="category" href="{{ url_for('showHotelsByCategory', category=category[0]) }}">{{ category[0] }}</a></h1>
+    {% endfor %}
+    
 </section>
 
 {% endblock %}
