--- a/static/scss/style.scss
+++ b/static/scss/style.scss
@@ -143,10 +143,6 @@ img {
   width: 100%;
 }
 
-.sub-link {
-  margin-bottom: 20px;
-}
-
 // ************************************
 // Module Rules ***********************
 // ************************************
@@ -211,6 +207,7 @@ header {
 }
 
 .container {
+  margin-bottom: 50px;
   margin-top: 100px;
 }
 
@@ -427,6 +424,7 @@ header {
   // {{ end HEADER }}
 
   .hotel-img {
+    border-radius: 50%;
     height: 400px;
     width: 700px;
   }
